--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,29 @@
-name: Run WAN Video Bot 
-on:
-workflow_dispatch: 
-jobs:
-env: HF_SPACE:"KingNish/wan2-2-fast"
-API_NAME: /generate_video 
-PROMPT: make this image come alive, cinematic motion 
-IMAGE_URL: "" 
-WIDTH: '896' 
-HEIGHT: '896' 
-SECONDS: '5' 
-NEGATIVE_PROMPT: "" 
-GUIDANCE_SCALE: '0' 
-STEPS: '4' 
-SEED: '42' 
-RANDOMIZE_SEED: 'true'f
-run-wan: runs-on: ubuntu-latest steps:
-uses: actions/checkout@v4
-uses: actions/setup-python@v5 with: python-version: '3.11'
+name: Run WAN Video Bot on: workflow_dispatch:
+env: HF_SPACE: KingNish/wan2-2-fast API_NAME: /generate_video PROMPT: make this image come alive, cinematic motion IMAGE_URL: "" WIDTH: "896" HEIGHT: "896" SECONDS: "5" NEGATIVE_PROMPT: "" GUIDANCE_SCALE: "0" STEPS: "4" SEED: "42" RANDOMIZE_SEED: "true"
+jobs: run-wan: runs-on: ubuntu-latest steps:
+name: Checkout uses: actions/checkout@v4
+name: Setup Python uses: actions/setup-python@v5 with: python-version: "3.11"
 name: Install deps run: | python -V pip install -U pip pip install -U gradio_client requests
 name: Run bot env: HF_TOKEN: ${{ secrets.HF_TOKEN }} run: | python - <<'PY' import os, json, shutil, pathlib, requests, traceback from gradio_client import Client, handle_file
   def save(name, text):
-      try: open(name, "w", encoding="utf-8").write(text)
-      except Exception: pass
+      try:
+          open(name, "w", encoding="utf-8").write(text)
+      except Exception:
+          pass
 
   try:
       client = Client(os.getenv("HF_SPACE"), hf_token=os.getenv("HF_TOKEN") or None)
       kwargs = {
-        "input_image": handle_file(os.getenv("IMAGE_URL")) if os.getenv("IMAGE_URL") else None,
-        "prompt": os.getenv("PROMPT") or "",
-        "height": int(os.getenv("HEIGHT","896")),
-        "width": int(os.getenv("WIDTH","896")),
-        "negative_prompt": os.getenv("NEGATIVE_PROMPT") or None,
-        "duration_seconds": float(os.getenv("SECONDS","5")),
-        "guidance_scale": float(os.getenv("GUIDANCE_SCALE","0")),
-        "steps": int(os.getenv("STEPS","4")),
-        "seed": int(os.getenv("SEED","42")),
-        "randomize_seed": os.getenv("RANDOMIZE_SEED","true").lower()=="true",
+          "input_image": handle_file(os.getenv("IMAGE_URL")) if os.getenv("IMAGE_URL") else None,
+          "prompt": os.getenv("PROMPT") or "",
+          "height": int(os.getenv("HEIGHT","896")),
+          "width": int(os.getenv("WIDTH","896")),
+          "negative_prompt": os.getenv("NEGATIVE_PROMPT") or None,
+          "duration_seconds": float(os.getenv("SECONDS","5")),
+          "guidance_scale": float(os.getenv("GUIDANCE_SCALE","0")),
+          "steps": int(os.getenv("STEPS","4")),
+          "seed": int(os.getenv("SEED","42")),
+          "randomize_seed": os.getenv("RANDOMIZE_SEED","true").lower()=="true",
       }
       out = client.predict(api_name=os.getenv("API_NAME"), **kwargs)
       print("RAW response:", repr(out))
